# snouty

./: .envrc  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  _typos.toml  assertions.json  build.rs  dist-workspace.toml  mock_server.sh  openapi.json  pyproject.toml  shell.nix
.claude/: settings.json
.claude/skills/release/: SKILL.md
.claude/skills/satisfaction-review/: SKILL.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: build.yml  claude-code-review.yml  claude.yml  release.yml  spec-drift-check.yml  zulip_notifier.yml
examples/: mock_api.rs
npins/: sources.json
scripts/: build-validate-samples.sh  build_docs_fixture.py  gen-gallery.py  gen-gallery.sh
specs/: api_webhook.txt  completions.txt  config_file.txt  debug.md  debug.txt  docs.md  docs_search.txt  docs_shared.txt  docs_show.txt  docs_sqlite.txt  docs_tree.txt  doctor.txt  help.txt  launch.txt  launch_config.txt  login.txt  proxy.txt  run.md  run.txt  run_config.txt  runs.txt  settings.txt  settings_strict.txt  settings_tenant.txt  test_stub.txt  update.txt  validate.txt
specs_engine/: launch_config_push.txt  run_config_arch.txt  run_config_push.txt  validate.txt  validate_build.txt  validate_env.txt  validate_failures.txt  validate_k8s.txt  validate_network_arch.txt  validate_setup.txt  validate_timeout.txt
src/: api.rs  api_cache.rs  attributed_value.rs  auth.rs  cli.rs  compose.rs  config.rs  container.rs  credentials.rs  docs.rs  doctor.rs  env.rs  error.rs  lib.rs  login.rs  main.rs  moment.rs  openapi.json  params.rs  params_schema.json  podman.rs  process.rs  render.rs  run_moment.rs  runs.rs  scripts.rs  settings.rs  snouty_config.rs  test_stub.rs  testutils.rs  time.rs  util.rs  validate.rs
src/docs/: snippet.rs
tests/: cli.rs  cli_docs.rs  cli_general.rs  cli_launch_config.rs  cli_run_config.rs  cli_validate.rs  keychain_macos.rs  spec.rs
tests/fixtures/: README.md  build_docs_fixture.py  docs.db
tests/fixtures/container-shims/: docker-as-podman.sh  docker.sh  podman.sh
tests/fixtures/docs-src/: getting_started.md  multiverse_debugging.md
tests/fixtures/docs-src/environment/: fault_injection.md
tests/fixtures/docs-src/faq/: what_is_a_poc.md
tests/fixtures/docs-src/guides/: docker_basics.md
tests/fixtures/docs-src/introduction/: how_antithesis_works.md
tests/fixtures/docs-src/multiverse_debugging/: overview.md
tests/fixtures/docs-src/reference/: test_patterns.md
tests/fixtures/docs-src/sdk/: python_sdk.md
tests/fixtures/validate/: README.md
tests/fixtures/validate/ambiguous/: docker-compose.yaml
tests/fixtures/validate/ambiguous/manifests/: namespace.yaml
tests/fixtures/validate/external-network/: docker-compose.yaml
tests/fixtures/validate/malformed-compose/: docker-compose.yaml
tests/fixtures/validate/missing-image/: docker-compose.yaml
tests/fixtures/validate/neither/: README.md
tests/fixtures/validate/no-services/: docker-compose.yaml
tests/fixtures/validate/non-executable-command/: Dockerfile  docker-compose.yaml
tests/fixtures/validate/stranded/: Dockerfile  docker-compose.yaml
tests/fixtures/validate/timeout/: docker-compose.yaml
tests/fixtures/validate/unrecognized-command/: Dockerfile  docker-compose.yaml
tests/fixtures/validate/valid/: Dockerfile  docker-compose.yaml
tests/fixtures/validate/valid/test/quickstart/: anytime_probe
tests/fixtures/validate/wrong-extension/: docker-compose.yml
tests/support/: mod.rs
