[package]
name = "snouty"
version = "0.3.4"
edition = "2024"
description = "A CLI tool for using the Antithesis API"
license = "Apache-2.0"
repository = "https://github.com/antithesishq/snouty"

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
getrandom = "0.3"
env_logger = "0.11"
itertools = "0.14"
json5 = "1.3.0"
jsonschema = "0.37.4"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls-vendored"] }
color-eyre = { version = "0.6", default-features = false }
tokio = { version = "1", features = ["rt", "macros", "process", "time", "io-util", "io-std", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.34", features = ["bundled"] }
console = "0.15"
dirs = "6"
tempfile = "3"
pulldown-cmark = "0.13"
libc = "0.2"
regex = "1"
ptree = { version = "0.5.2", default-features = false }
serde_yaml = "0.9"
tryiter = "0.6.0"

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
tempfile = "3"
testscript-rs = "0.2"
ctor = "0.4"
wiremock = "0.6"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
