[package]
name = "snouty"
version = "0.3.6"
edition = "2024"
description = "A CLI tool for using the Antithesis API"
license = "Apache-2.0"
repository = "https://github.com/antithesishq/snouty"
default-run = "snouty"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
getrandom = "0.3"
env_logger = "0.11"
# pinned: alpha API churn between releases
http-cache-reqwest = "=1.0.0-alpha.6"
json5 = "1.3.0"
jsonschema = { version = "0.37.4", default-features = false }
log = "0.4"
progenitor-client = "0.14.0"
reqwest = { version = "0.13.1", default-features = false, features = ["http2", "json", "query", "stream", "native-tls-vendored"] }
reqwest-middleware = "0.5"
color-eyre = { version = "0.6", default-features = false }
futures-util = "0.3"
tokio = { version = "1", features = ["rt", "macros", "process", "time", "io-util", "io-std", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.34", features = ["bundled"] }
console = "0.15"
dirs = "6"
tempfile = "3"
pulldown-cmark = "0.13"
libc = "0.2"
regex = "1"
ptree = { version = "0.5.2", default-features = false }
serde_yaml = "0.9"

[[example]]
name = "mock_api"
path = "examples/mock_api.rs"

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
prettyplease = "0.2"
progenitor = "0.14.0"
quote = "1"
serde_json = "1"
syn = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
tempfile = "3"
testscript-rs = "0.2"
ctor = "0.4"
wiremock = "0.6"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
